fixed gallery stretch responsiveness

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,6 +84,17 @@
     }
   }
 
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
   .menu-nav {
     height: 75vh;
     transform: translate3d(-100%, 0, 0);
@@ -114,5 +125,48 @@
 
   .projects {
     grid-template-columns: 1fr;
+
+    // .project-pics {
+    //   flex-direction: column;
+    // }
+    .project-gallery {
+      .current-pic {
+        height: 70vh;
+
+        .cur_pic {
+          width: 80%;
+          height: 55vh;
+        }
+      }
+
+      .project-pics {
+        height: 30vh;
+
+        .project-smpic {
+          width: 25%;
+          height: 20vh;
+        }
+      }
+    }
+  }
+
+  .project-gallery {
+    .current-pic {
+      height: 70vh;
+
+      .cur_pic {
+        width: 80%;
+        height: 55vh;
+      }
+    }
+
+    .project-pics {
+      height: 30vh;
+
+      .project-smpic {
+        width: 25%;
+        height: 20vh;
+      }
+    }
   }
 }
